# fastapi-task

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  queries.py
alembic/: env.py
alembic/versions/: d0572b90cf54_initial.py
alemblic/: env.py
app/: config.py  database.py  exceptions.py  logging.py  main.py
app/api/: reports.py  transactions.py  users.py
app/dependencies/: __init__.py  logging.py
app/middleware/: __init__.py  logger.py
app/models/: db_models.py  enums.py  schemas.py
app/models/db_models/: __init__.py  accounting.py  transaction.py  user.py
app/models/schemas/: __init__.py  report.py  transaction.py  user.py
app/repositories/: accounting_repository.py  balance_repository.py  base.py  exchange_rate_repository.py  transaction_repository.py  user_repository.py
app/services/: outbox_processor.py  report_service.py  transaction_service.py  user_service.py
app/tasks/: celery_app.py  report_tasks.py
postman/: transaction_api.json
scripts/: __init__.py  seed_data.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_reports_api.py  test_transactions_api.py  test_users_api.py
tests/unit/: test_report_service.py  test_transaction_service.py  test_user_service.py
