[tool.poetry]
name = "transaction-api"
version = "0.1.0"
description = "Optimized API service for transaction processing"
authors = ["Author <alhudnitski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <=3.13.1"
fastapi = "0.115.14"
uvicorn = {extras = ["standard"], version = "0.23.2"}
sqlalchemy = "2.0.45"
loguru = "0.7.3"
asyncpg = "0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "2.12.0"
alembic = "1.17.2"
celery = {extras = ["redis"], version = "5.6.0"}
redis = "5.3.1"
httpx = "0.25.2"
python-dotenv = "1.2.1"
greenlet = "3.3.0"
vine = "5.1.0"
billiard = "4.2.4"
kombu = "5.6.1"
amqp = "5.3.1"
typing-extensions = "4.15.0"
pydantic-core = "2.41.5"
annotated-types = "0.7.0"
anyio = "4.12.0"
click = "8.3.1"
sniffio = "1.3.1"
h11 = "0.16.0"
httpcore = "1.0.9"
idna = "3.11"
certifi = "2025.11.12"
httptools = "0.7.1"
websockets = "15.0.1"
starlette = "0.46.2"
PyJWT = "2.10.1"
psycopg = "3.3.2"
Mako = "1.3.10"
MarkupSafe = "3.0.3"
python-dateutil = "2.9.0.post0"
tzdata = "2025.2"
tzlocal = "5.3.1"
watchfiles = "1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
pytest-env = "1.0.1"
pytest-httpx = "0.26.0"
pytest-mock = "3.11.1"
pytest-xdist = "3.3.1"
faker = "19.10.0"
mypy = "1.7.0"
flake8 = "6.1.0"
isort = "5.12.0"
black = "23.11.0"
pre-commit = "3.8.0"
pylint = "3.0.1"
types-redis = "4.6.0"
exceptiongroup = "1.3.1"
typing-inspection = "0.4.2"
pyproject-toml = "0.1.0"
PyYAML = "6.0.3"
nodeenv = "1.9.1"
identify = "2.6.15"
cfgv = "3.5.0"
distlib = "0.4.0"
filelock = "3.20.0"
platformdirs = "4.5.1"
virtualenv = "20.35.4"
colorama = "0.4.6"
setuptools = "80.9.0"
wheel = "0.45.1"
click-plugins = "1.1.1.2"
click-repl = "0.3.0"
click-didyoumean = "0.3.1"
prompt-toolkit = "3.0.52"
wcwidth = "0.2.14"
six = "1.17.0"
packaging = "25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "120"
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"


[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.pylint.messages_control]
disable = [
    "C0111",
    "R0903",
]
